Revert register namespace and add complete origin registration option
